--- a/moviedb/templates/movies/listing.html
+++ b/moviedb/templates/movies/listing.html
@@ -12,7 +12,7 @@
 <div class="col-lg-12">
     <div class="filterbox">
         <div class="btn-group">
-            <button type="button" class="btn btn-default">DVD</button>
+            <button type="button" class="btn btn-default"><a ahref="{% buildfilterurl request.GET support="DVD" %}">DVD</a></button>
             <button type="button" class="btn btn-default">Both</button>
             <button type="button" class="btn btn-default">Blue-Ray</button>
         </div>
