--- a/moviedb/templates/movies/listing.html
+++ b/moviedb/templates/movies/listing.html
@@ -12,9 +12,9 @@
 <div class="col-lg-12">
     <div class="filterbox">
         <div class="btn-group">
-            <button type="button" class="btn btn-default"><a ahref="{% buildfilterurl request.GET support="DVD" %}">DVD</a></button>
-            <button type="button" class="btn btn-default">Both</button>
-            <button type="button" class="btn btn-default">Blue-Ray</button>
+            <a class="btn btn-default {% isfilteractive request.GET support="DVD" %}" href="{% url 'movieindex' %}?{% buildfilterurl request.GET support="DVD" %}">DVD</a>
+            <a class="btn btn-default {% isfilteractive request.GET support=None %}" href="{% url 'movieindex' %}?{% buildfilterurl request.GET support=None %}">Both</a>
+            <a class="btn btn-default {% isfilteractive request.GET support="BLUERAY" %}" href="{% url 'movieindex' %}?{% buildfilterurl request.GET support="BLUERAY" %}">Blue-Ray</a>
         </div>
 
     </div>
